# ML2_Clase

./: Makefile  README.md  pyproject.toml
feast_service/fs_ml2/feature_repo/: booking.py  feature_store.yaml
feast_service/fs_ml2/feature_repo/data/: driver_stats.parquet  registry.db
ml2_clases/: __init__.py  dataset.py  features.py  plots.py
ml2_clases/modeling/: predict.py  train.py
notebooks/: 1_fe0.ipynb  advances_supervised_models.ipynb  advances_unsupervised_models.ipynb  embeddings.ipynb  prueba.ipynb
