[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml2_clases"
version = "0.0.1"
description = "Clases del curso de ML2"
authors = [
  { name = "Ronaldo David Cornejo Valencia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "catboost>=1.2.8",
    "dagshub>=0.6.3",
    "feast>=0.53.0",
    "jupyterlab>=4.4.9",
    "lightgbm>=4.6.0",
    "loguru",
    "mlflow<3",
    "pandas>=2.3.3",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.2",
    "tqdm",
    "typer",
    "xgboost>=3.0.5",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ml2_clases"]
include = ["pyproject.toml", "ml2_clases/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml2_clases"]
force-sort-within-sections = true

